# vk-api-ads

./: README.md  pyproject.toml
vk_api_ads/: __init__.py  app.py  client.py  constants.py  exceptions.py  schemas.py
