[tool.poetry]
name = "vk-api-ads"
version = "0.1.0"
description = ""
authors = ["Oleg Ionov <ionov.dpmn@gmail.com>"]
readme = "README.md"
packages = [{include = "vk_api_ads"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
